feat: next auth

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="postgresql://postgres:password@localhost:5432/mini-commerce?schema=public"
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
+GOOGLE_CLIENT_ID=502347164212-ve1c7vqg33l1p68l2drp8l4vlhogcpj0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
